# sage

./: .gitignore  .pylintrc  .sage-env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  run-tests.yml
benchmarks/retrieval/: README.md  requirements.txt  retrieve.py  retrieve_kaggle.py  sample.json
codesage/: chat.py  data_manager.py
repo2vec/: .sample-env  chat.py  chunker.py  data_manager.py  embedder.py  github.py  index.py  sample-exclude.txt  vector_store.py
sage/: chat.py  chunker.py  code_symbols.py  config.py  constants.py  data_manager.py  embedder.py  fine_tuning_code_llm_on_single_gpu.ipynb  fine_tuning_code_llm_on_single_gpu.py  github.py  index.py  llm.py  reranker.py  retriever.py  sample-exclude.txt  vector_store.py
sage/configs/: local.yaml  remote.yaml
src/: chat.py  chunker.py  data_manager.py  embedder.py  github.py  github_issues_manager.py  index.py  llm.py  repo_manager.py  sample-exclude.txt  vector_store.py
tests/: conftest.py  test_chunker.py  test_data_manager.py  test_embedder.py  test_github.py  test_vector_store.py
tests/assets/: sample-script.ts  sample-script.tsx
